--- a/app/assets/styles/modules/_menubar.scss
+++ b/app/assets/styles/modules/_menubar.scss
@@ -569,7 +569,7 @@
         transform-origin: 0 0;
         transition: all .3s ease-out;
         position: relative;
-        z-index: -10;
+        z-index: 9;
         position: absolute;
         top: 63px;
         background-color: #fff;
