--- a/app/assets/styles/style.scss
+++ b/app/assets/styles/style.scss
@@ -176,3 +176,6 @@ img {
     left: 8px;
 } 
 #block-whitespaces {display:none;} 
+.academic-program-wrapper {
+    margin-top: 80px;
+}
